--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Time and Space Complexity</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <!-- the entire body must be written by student -->
 
+  <h1>Understanding Time, Space, and Complexity</h1>
+
+  <p>
+    Time complexity measures how the runtime of an algorithm increases with the size of the input. 
+    A lower time complexity generally means the algorithm is more efficient and faster to execute.
+  </p>
+
+  <p>
+    <b>Space Complexity</b> defines how much memory an algorithm needs relative to the input size. 
+    Typically, an algorithm with lower space usage, such as O(n), is considered better for memory optimization.
+  </p>
+
+  <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
