--- a/main.html
+++ b/main.html
@@ -4,24 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Time and Space Complexity</title>
-  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <!-- the entire body must be written by student -->
-
-  <h1>Understanding Time, Space, and Complexity</h1>
+  <h1>Understanding Time and Space Complexity</h1>
 
   <p>
-    Time complexity measures how the runtime of an algorithm increases with the size of the input. 
-    A lower time complexity generally means the algorithm is more efficient and faster to execute.
+    Time complexity refers to the computational complexity that describes the amount of time an algorithm takes to run as a function of the length of the input. It helps determine how efficient an algorithm is in terms of execution time.
   </p>
 
   <p>
-    <b>Space Complexity</b> defines how much memory an algorithm needs relative to the input size. 
-    Typically, an algorithm with lower space usage, such as O(n), is considered better for memory optimization.
+    <b>Space Complexity</b> refers to the total memory space required by an algorithm to execute completely. It includes both auxiliary space and input space. For example, an algorithm with linear <b>Space Complexity</b> can be represented as O(n).
   </p>
-
-  <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
