--- a/main.html
+++ b/main.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
   <title>Time and Space Complexity</title>
 </head>
 <body>
-  <h1>Understanding Time and Space Complexity</h1>
+  <h1>Understanding Time, Space and Complexity</h1>
 
   <p>
-    Time complexity refers to the computational complexity that describes the amount of time an algorithm takes to run as a function of the length of the input. It helps determine how efficient an algorithm is in terms of execution time.
+    Time complexity refers to how the runtime of an algorithm grows with the size of the input. Time complexity helps us reason about how efficient an algorithm is and compare different approaches in terms of execution time.
   </p>
 
   <p>
-    <b>Space Complexity</b> refers to the total memory space required by an algorithm to execute completely. It includes both auxiliary space and input space. For example, an algorithm with linear <b>Space Complexity</b> can be represented as O(n).
+    <b>Space Complexity</b> refers to the amount of memory an algorithm requires to run, including input and auxiliary space. For example, an algorithm that uses an amount of memory proportional to the input size has space usage described as O(n).
   </p>
 </body>
 </html>
